[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "street-incident-ai"
version = "0.1.0"
description = "Street incident AI pipeline for camera detection, Bedrock reasoning, S3 evidence, IoT Core, and Salesforce cases."
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
street-incident-ai = "street_incident_ai.cli:main"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
strict_optional = true

[tool.ruff]
line-length = 120
src = ["src", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
